plugins {
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

ext {
    springCloudVersion = "2025.0.0"
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.xmlunit:xmlunit-core:2.10.3"
    implementation "org.springframework:spring-webflux:6.2.10"
    implementation "org.springframework:spring-webmvc:6.2.10"
    implementation "org.springframework:spring-context:6.2.10"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:11.0.10"
    implementation 'com.azure:azure-identity:1.17.0'
    implementation 'com.microsoft.graph:microsoft-graph:6.53.0'
    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:1.8.10'
    implementation 'com.google.code.gson:gson:2.13.1'
    implementation 'commons-codec:commons-codec:1.19.0'
    implementation 'org.springframework.kafka:spring-kafka:3.3.9'
    implementation 'no.fintlabs:fint-kafka:5.0.0-rc-3'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.springframework.cloud:spring-cloud-function-context:4.2.3'
    implementation 'org.flywaydb:flyway-core:9.22.3'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus:1.16.0-M2'
    runtimeOnly 'org.postgresql:postgresql'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.5.5'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.5.5'
    testImplementation 'org.projectlombok:lombok:1.18.38'


}

test {
    maxHeapSize = "20G"
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}
